--- a/canal-client/.classpath
+++ b/canal-client/.classpath
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/canal.client-1.0.22.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/canal.common-1.0.22.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/canal.example-1.0.22.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/canal.protocol-1.0.22.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/fastjson-1.1.35.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/guava-18.0.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/jcl-over-slf4j-1.7.12.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/logback-classic-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/logback-core-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/netty-3.2.5.Final.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/slf4j-api-1.7.12.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/spring-2.5.6.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/zkclient-0.1.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/zookeeper-3.4.5.jar"/>
-	<classpathentry kind="lib" path="/Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/lib/rabbitmq-client.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="lib/canal.client-1.0.22.jar"/>
+	<classpathentry kind="lib" path="lib/canal.common-1.0.22.jar"/>
+	<classpathentry kind="lib" path="lib/canal.example-1.0.22.jar"/>
+	<classpathentry kind="lib" path="lib/canal.protocol-1.0.22.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/fastjson-1.1.35.jar"/>
+	<classpathentry kind="lib" path="lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/netty-3.2.5.Final.jar"/>
+	<classpathentry kind="lib" path="lib/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/rabbitmq-client.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="lib/spring-2.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/zkclient-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/zookeeper-3.4.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
