修改配置读取方式

--- a/canal-client/conf/canal.properties
+++ b/canal-client/conf/canal.properties
@@ -11,6 +11,8 @@ canal.server.port = 11111
 # 实例 默认 example/instance.properties
 canal.server.instance = example
 
+canal.server.subscribe = .*\\..*
+
 # 每次获取binlog数据 行数
 canal.batchsize = 1000
 
@@ -20,7 +22,7 @@ canal.sleep = 1000
 
 ############ 写入到文件 ###############
 # 数据保存路径
-canal.binlog.dir = /Users/liukelin/Desktop/canal-otter-mycat-cobar/canal_object/data
+canal.binlog.dir = ../data
 
 # 数据保存格式 y=>YY m=>YYMM d=>YYMMdd h每小时 i每分钟
 canal.binlog.filename = y
@@ -33,8 +35,10 @@ rabbitmq.host = 192.168.179.184
 rabbitmq.port = 5672
 rabbitmq.user = test
 rabbitmq.pass = 123456
-# 队列名称
-rabbitmq.queuename = canal_binlog_data
+# exchange名称
+rabbitmq.exchange = canal_binlog_exchange
+# 队列名称  无
+rabbitmq.queuename = none
 # 队列持久化
 rabbitmq.durable = true
 # 是否ack
